kubernetes/fluxcd/apps/base/searxng/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`search.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
    - match: Host(`search.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    secretName: certificate-secret
